syntax = "proto3";

package pkg.api;

service Management {
  rpc CreateIdentityVolume(CreateIdentityVolumeRequest)
      returns (CreateIdentityVolumeResponse) {
  }

  rpc DestroyIdentityVolume(DestroyIdentityVolumeRequest)
      returns (DestroyIdentityVolumeResponse) {
  }
}

message CreateIdentityVolumeRequest {
  string mount_path = 1;
  string service_account = 2;
  map<string, string> mount_options = 3;
}

message CreateIdentityVolumeResponse {
}

message DestroyIdentityVolumeRequest {
  string mount_path = 1;
}

message DestroyIdentityVolumeResponse {
}
